@@ -1,0 +1,3 @@
+package test.factory.issue553;
+
+public class Concrete extends Base {}
